[gd_scene load_steps=2 format=3 uid="uid://ri14qd14hhu6"]

[ext_resource type="Script" uid="uid://bspbkr603mgsb" path="res://scenes/game.gd" id="1_uwrxv"]

[node name="Game" type="Node2D"]
script = ExtResource("1_uwrxv")

[node name="UI-Elements" type="CanvasLayer" parent="."]

[node name="Player1Score" type="Label" parent="UI-Elements"]
offset_right = 40.0
offset_bottom = 23.0
text = "Player 1 Score"

[node name="Player2Score" type="Label" parent="UI-Elements"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Player 2 Score"

[node name="TurnIndicator" type="Label" parent="UI-Elements"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Who's Turn Is It"
horizontal_alignment = 1

[node name="RollButton" type="Button" parent="UI-Elements"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -18.5
offset_top = -31.0
offset_right = 18.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 28
text = "Roll"

[node name="Board" type="Node2D" parent="."]

[node name="Player1Board" type="PanelContainer" parent="Board"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 150.0
offset_top = 200.0
offset_right = 458.0
offset_bottom = 510.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player1Grid" type="GridContainer" parent="Board/Player1Board"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 5
columns = 3

[node name="Player2Board" type="PanelContainer" parent="Board"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 700.0
offset_top = 200.0
offset_right = 1008.0
offset_bottom = 510.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player2Grid" type="GridContainer" parent="Board/Player2Board"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 5
columns = 3

[node name="ColumnInputs" type="HBoxContainer" parent="."]
offset_left = 150.0
offset_top = 150.0
offset_right = 419.0
offset_bottom = 190.0
theme_override_constants/separation = 26

[node name="Column1Button" type="Button" parent="ColumnInputs"]
layout_mode = 2
text = "Place Dice"

[node name="Column2Button" type="Button" parent="ColumnInputs"]
layout_mode = 2
text = "Place Dice"

[node name="Column3Button" type="Button" parent="ColumnInputs"]
layout_mode = 2
text = "Place Dice"

[connection signal="pressed" from="UI-Elements/RollButton" to="." method="_on_roll_button_pressed"]
[connection signal="pressed" from="ColumnInputs/Column1Button" to="." method="_on_column_1_button_pressed"]
[connection signal="pressed" from="ColumnInputs/Column1Button" to="." method="_on_column_button_pressed" binds= [0]]
[connection signal="pressed" from="ColumnInputs/Column2Button" to="." method="_on_column_button_pressed" binds= [1]]
[connection signal="pressed" from="ColumnInputs/Column3Button" to="." method="_on_column_button_pressed" binds= [2]]
